[gd_scene load_steps=2 format=3 uid="uid://dx3d6ey4wnvxy"]

[ext_resource type="Script" uid="uid://c37b4tqjb0y1n" path="res://GUI/HUD/Scripts/death_screen.gd" id="1_oc4ts"]

[node name="DeathScreen" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oc4ts")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 0.862745)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 230)
layout_mode = 2

[node name="BorderRect" type="ColorRect" parent="CenterContainer/DeathPanel"]
layout_mode = 2
color = Color(0.2, 0.8, 0.7, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/DeathPanel"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BackgroundRect" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer"]
layout_mode = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DeathPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "You Are Dead"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoadLastSave" type="Button" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.3, 1, 0.85, 1)
theme_override_colors/font_color = Color(0.2, 0.8, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.15, 0.6, 0.5, 1)
text = "Load Last Save"

[node name="ButtonBorder1" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer/LoadLastSave"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.8, 0.7, 1)

[node name="ButtonBackground1" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer/LoadLastSave"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="MainMenu" type="Button" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.3, 1, 0.85, 1)
theme_override_colors/font_color = Color(0.2, 0.8, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.15, 0.6, 0.5, 1)
text = "Main Menu"

[node name="ButtonBorder2" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer/MainMenu"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.8, 0.7, 1)

[node name="ButtonBackground2" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer/MainMenu"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="QuitGame" type="Button" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.3, 1, 0.85, 1)
theme_override_colors/font_color = Color(0.2, 0.8, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.15, 0.6, 0.5, 1)
text = "Quit Game"

[node name="ButtonBorder3" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer/QuitGame"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.8, 0.7, 1)

[node name="ButtonBackground3" type="ColorRect" parent="CenterContainer/DeathPanel/MarginContainer/VBoxContainer/QuitGame"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.05, 1)
